fix: Redis 테스트코드 추가