@@ -3,16 +3,13 @@ package com.trevari.book.domain;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.persistence.ElementCollection;
 import jakarta.persistence.Embeddable;
+import java.time.LocalDate;
+import java.util.Collections;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
-
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Embeddable
 @Getter
@@ -25,15 +22,16 @@ public class PublicationInfo {
     @ElementCollection
     @Schema(description = "저자 목록", example = "[\"Raoul-Gabriel Urma\", \"Mario Fusco\"]")
     private List<String> authors;
-
+    
     @Schema(description = "출판사", example = "Manning Publications")
     private String publisher;
     
     @Schema(description = "출간일", example = "2020-01-01")
     private LocalDate publishedDate;
-
+    
     /**
      * 대표 저자(첫 번째 저자) 반환
+     *
      * @return 대표 저자명, 저자가 없으면 "Unknown Author"
      */
     public String getPrimaryAuthor() {
@@ -42,9 +40,10 @@ public class PublicationInfo {
         }
         return authors.get(0);
     }
-
+    
     /**
      * 저자 목록을 문자열로 반환 (", "로 구분)
+     *
      * @return 저자 목록 문자열
      */
     public String getAuthorsAsString() {
@@ -53,25 +52,28 @@ public class PublicationInfo {
         }
         return String.join(", ", authors);
     }
-
+    
     /**
      * 공동 저자 존재 여부 확인
+     *
      * @return 저자가 2명 이상이면 true
      */
     public boolean hasCoAuthors() {
         return authors != null && authors.size() > 1;
     }
-
+    
     /**
      * 출간년도 반환
+     *
      * @return 출간년도, 출간일이 없으면 0
      */
     public int getPublicationYear() {
         return publishedDate != null ? publishedDate.getYear() : 0;
     }
-
+    
     /**
      * 출간 경과 연수 계산
+     *
      * @return 현재 기준 출간 후 경과 연수
      */
     public int getYearsSincePublication() {
@@ -80,17 +82,19 @@ public class PublicationInfo {
         }
         return LocalDate.now().getYear() - publishedDate.getYear();
     }
-
+    
     /**
      * 최근 출간 도서 여부 (5년 이내)
+     *
      * @return 5년 이내 출간되었으면 true
      */
     public boolean isRecentPublication() {
         return getYearsSincePublication() <= 5;
     }
-
+    
     /**
      * 출판사명 정규화 (앞뒤 공백 제거, 빈 문자열 처리)
+     *
      * @return 정규화된 출판사명
      */
     public String getNormalizedPublisher() {
@@ -99,9 +103,10 @@ public class PublicationInfo {
         }
         return publisher.trim();
     }
-
+    
     /**
      * 저자 검색 (대소문자 구분 없음)
+     *
      * @param searchName 검색할 저자명
      * @return 해당 저자가 포함되어 있으면 true
      */
@@ -110,22 +115,24 @@ public class PublicationInfo {
             return false;
         }
         return authors.stream()
-                .anyMatch(author -> author.toLowerCase().contains(searchName.toLowerCase()));
+            .anyMatch(author -> author.toLowerCase().contains(searchName.toLowerCase()));
     }
-
+    
     /**
      * 저자 목록 불변 리스트 반환
+     *
      * @return 저자 목록의 불변 복사본
      */
     public List<String> getAuthorsUnmodifiable() {
         if (authors == null) {
             return Collections.emptyList();
         }
-        return Collections.unmodifiableList(new ArrayList<>(authors));
+        return List.copyOf(authors);
     }
-
+    
     /**
      * 빈 저자 목록 정리
+     *
      * @return 빈 문자열이나 null 저자를 제거한 새로운 PublicationInfo
      */
     public PublicationInfo cleanAuthors() {
@@ -134,24 +141,25 @@ public class PublicationInfo {
         }
         
         List<String> cleanedAuthors = authors.stream()
-                .filter(author -> author != null && !author.trim().isEmpty())
-                .map(String::trim)
-                .collect(Collectors.toList());
+            .filter(author -> author != null && !author.trim().isEmpty())
+            .map(String::trim)
+            .toList();
         
         return PublicationInfo.builder()
-                .authors(cleanedAuthors)
-                .publisher(publisher)
-                .publishedDate(publishedDate)
-                .build();
+            .authors(cleanedAuthors)
+            .publisher(publisher)
+            .publishedDate(publishedDate)
+            .build();
     }
-
+    
     /**
      * 출판 정보 유효성 검증
+     *
      * @return 유효한 출판 정보이면 true
      */
     public boolean isValid() {
         return (authors != null && !authors.isEmpty()) &&
-               (publisher != null && !publisher.trim().isEmpty()) &&
-               (publishedDate != null && !publishedDate.isAfter(LocalDate.now()));
+            (publisher != null && !publisher.trim().isEmpty()) &&
+            (publishedDate != null && !publishedDate.isAfter(LocalDate.now()));
     }
 }
